# IndyCar_RaceSimulator

./: .clang-format  CMakeLists.txt  README.md  race_config.yml
include/: CarController.h  CarView.h  RaceConfig.h  RainStrategy.h  SimulationEngine.h  SunnyStrategy.h  WeatherStrategy.h  car.h  driver.h  team.h
src/: CarController.cpp  CarView.cpp  RaceConfig.cpp  RainStrategy.cpp  SimulationEngine.cpp  SunnyStrategy.cpp  car.cpp  driver.cpp  main.cpp  team.cpp
